--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 /* Reset */
+
 h1, h2, h3, h4, h5, ul, body, p {
   margin: 0;
   padding: 0;
@@ -12,6 +13,11 @@ a {
   cursor: pointer;
 }
 
+* {
+  position: relative;
+  z-index: 5;
+}
+
 /* Variables */
 
 :root {
@@ -19,32 +25,111 @@ a {
   --color-fg-1: #a99877; /* yellow */
   --color-fg-2: #660000; /* red */
   --color-fg-3: #F3E6D0; /* off-white */
+  --color-fg-4: #221103; /* black */
 
   --font-primary: normal 14px / 1.75 Arial, sans-serif;
   --font-heading: bold 18px / 1.75 'Palatino Linotype', Times, serif;
 
-  /* TODO: spacing */
+  --space-padding: 20px;
 }
 
 /* General */
 
 body {
   color: var(--color-fg-1);
-  background-color: var(--color-bg-1);
+  /* background-color: var(--color-bg-1); */
+  background-color: black;
   font: var(--font-primary);
 }
 
-h1 {
+h1, h2, h3 {
   color: var(--color-fg-3);
   font: var(--font-heading);
   text-transform: uppercase;
   padding-bottom: 5px;
 }
 
+p {
+  padding-bottom: var(--space-padding);
+}
+
 /* Components */
 
-/* Testing */
-.test {
-  width: 500px;
-  margin: 20px;
+.features {
+  background-color: var(--color-bg-1);
+  padding: var(--space-padding);
+  position: relative;
+  margin-top: 100px; /* TODO: remove? */
+  display: grid;
+  grid-template-areas: "skills desc";
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.features::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 990px;
+  height: 390px;
+  background: url('./img/features-bg.jpg') no-repeat -4px 0;
+}
+
+.features__skills {
+  grid-area: skills;
+  position: relative;
+  width: calc(325px - var(--space-padding) * 2);
+  padding: 75px var(--space-padding) 75px;
+  background: url('./img/parchment.jpg') repeat-y;
+  color: var(--color-fg-4);
+  margin-right: var(--space-padding);
+}
+
+.features__skills::before,
+.features__skills::after {
+  content: '';
+  z-index: 0;
+  position: absolute;
+  left: 0;
+  width: 325px;
+}
+
+.features__skills::before {
+  top: 0;
+  height: 265px;
+  background: url('./img/parchment-top.jpg');
+}
+
+.features__skills::after {
+  bottom: 0;
+  height: 215px;
+  background: url('./img/parchment-bot.jpg');
+}
+
+.features__skills h2 {
+  color: var(--color-fg-2);
+}
+
+.features__skills li {
+  border-style: solid;
+  border-image: linear-gradient(to right, rgba(0, 0, 0, 0) 50%, rgba(1, 1, 1, 0.1)) 1 / 0 0 1px 0;
+  width: calc(100% - 20px);
+  color: var(--color-fg-4);
+}
+
+.features__skills li:nth-child(3n) {
+  border-image: linear-gradient(to right, rgba(0, 0, 0, 0) 60%, rgba(1, 1, 1, 0.1)) 1 / 0 0 1px 0;
+}
+
+.features__skills .mod {
+  opacity: 0.5;
+  font-style: italic;
+}
+
+.features__desc {
+  grid-area: desc;
+}
+
+.features__tabs {
+  position: absolute;
 }
