--- a/src/style.css
+++ b/src/style.css
@@ -73,6 +73,7 @@ p {
   position: relative;
   display: grid;
   grid-template-areas: "skills desc";
+  grid-template-columns: calc(235px + 5.5 * var(--space-padding)) 1fr;
   border-top: 1px solid rgba(255, 255, 255, 0.2);
 }
 
@@ -81,7 +82,7 @@ p {
   position: absolute;
   left: 0;
   top: 0;
-  width: 990px;
+  max-width: 990px;
   height: 390px;
   background: url('./img/features-bg.jpg') no-repeat -4px 0;
 }
@@ -93,7 +94,6 @@ p {
   padding: 75px var(--space-padding) 75px;
   background: url('./img/parchment.jpg') repeat-y;
   color: var(--color-fg-4);
-  margin-right: var(--space-padding);
 }
 
 .features__skills::before,
@@ -208,4 +208,26 @@ p {
 .features__tabs a:hover {
   color: var(--color-fg-3);
   box-shadow: none;
+}
+
+ul.item-list {
+  margin-bottom: var(--space-padding);
+}
+
+ul.item-list li {
+  border-style: solid;
+  border-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(81, 63, 46, 0.5)) 1 / 0 0 1px 0;
+  display: flex;
+  align-items: center;
+}
+
+ul.item-list .icon {
+  width: 35px;
+  height: 35px;
+  border: 1px solid #513f2e;
+  margin-right: 10px;
+  border-radius: var(--border-radius);
+}
+
+ul.item-list .name {
 }
