--- a/src/style.css
+++ b/src/style.css
@@ -119,6 +119,7 @@ p {
 
 .features__skills h2 {
   color: var(--color-fg-2);
+  padding-left: 30px;
 }
 
 .features__skills li {
@@ -135,6 +136,20 @@ p {
 .features__skills .mod {
   opacity: 0.5;
   font-style: italic;
+  display: inline-block;
+  width: 25px;
+}
+
+.features__skills .prof {
+  color: var(--color-fg-2);
+  font-size: 25px;
+  vertical-align: middle;
+  padding-left: 5px;
+  line-height: 0;
+}
+
+.features__skills .num {
+  float: right;
 }
 
 .features__desc {
